Bug #2593 SHOW CREATE TABLE doesn't properly double quotes
Submitted: 30 Jan 2004 18:49 Modified: 12 Feb 2004 9:00
Reporter: Paul DuBois Email Updates:
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.1 OS:
Assigned to: Bugs System Target Version:

[30 Jan 2004 18:49] Paul DuBois
Description:
If you create a table that has an identifier quote
character in the name, SHOW CREATE TABLE
doesn't properly double the character when
the current identifier quote character is that
same character.

How to repeat:
mysql> SET sql_mode='';
Query OK, 0 rows affected (0.00 sec)

mysql> CREATE TABLE ```a` (i INT);
Query OK, 0 rows affected (0.03 sec)

mysql> SHOW CREATE TABLE ```a`;
+-------
+----------------------------------------------------------------------------------
-----+
| Table | Create Table                                                                          |
+-------
+----------------------------------------------------------------------------------
-----+
| `a    | CREATE TABLE ``a` (
  `i` int(11) default NULL
) ENGINE=MyISAM DEFAULT CHARSET=latin1 |
+-------
+----------------------------------------------------------------------------------
-----+
1 row in set (0.01 sec)

mysql> SET sql_mode='ANSI_QUOTES';
Query OK, 0 rows affected (0.01 sec)

mysql> CREATE TABLE """a" (i INT);
Query OK, 0 rows affected (0.01 sec)

mysql> SHOW CREATE TABLE """a";
+-------
+----------------------------------------------------------------------------------
-----+
| Table | Create Table                                                                          |
+-------
+----------------------------------------------------------------------------------
-----+
| "a    | CREATE TABLE ""a" (
  "i" int(11) default NULL
) ENGINE=MyISAM DEFAULT CHARSET=latin1 |
+-------
+----------------------------------------------------------------------------------
-----+
1 row in set (0.00 sec)
[6 Feb 2004 9:07] Victor Vagin
bk commit - 4.1 tree (vva:1.1698)
[12 Feb 2004 9:00] Victor Vagin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html